src/objects/Participant__c.object
<CustomObject>
    <fields>
        <fullName>CheckInDateTime__c</fullName>
        <label>チェックイン日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>イベント</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>参加者</relationshipLabel>
        <relationshipName>VolunteerParticipant</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ParticipantUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VolunteerParticipant</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>参加者</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>